# advent-of-code-repo

./: Cargo.toml  README.md
.github/workflows/: bench.yaml
benchmarks_output/: cargo_bench_output.txt
cli/: Cargo.toml
cli/src/: main.rs
cli/templates/: bin.rs
scripts/: bench.sh  run.sh  test.sh
year-2024/: Cargo.toml
year-2024/benches/: benchmarks.rs
year-2024/src/: day-01.rs  day_01.rs  day_02.rs  day_03.rs
