[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[[bin]]
name = "day-01"
path = "src/day_01.rs"

[[bin]]
name = "day-02"
path = "src/day_02.rs"


[dependencies.serde]
workspace = true

[package]
edition = "2021"
name = "year-2024"
version = "0.1.0"

[dev-dependencies]
divan.workspace = true
