[[bench]]
harness = false
name = "benchmarks"
path = "benches/benchmarks.rs"

[[bin]]
name = "day-01"
path = "src/day_01.rs"

[[bin]]
name = "day-02"
path = "src/day_02.rs"

[[bin]]
name = "day-03"
path = "src/day_03.rs"

[dependencies]
regex = "1.11.1"

[dependencies.serde]
workspace = true

[dev-dependencies.divan]
workspace = true

[package]
edition = "2021"
name = "year-2024"
version = "0.1.0"
